[package]
name = "is_hltv_dma_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# memory
memflow = "0.2.0"
dataview = "1.0.1"

# logging
log = "0.4.19"
simple_logger = "4.2.0"

# error handling
anyhow = "1.0.79"

# cli
clap = { version = "4.3.19", features = ["derive", "string"] }
ctrlc = "3.4.2"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
